# RCAIDE_Test

./: .gitignore  Electric.py  __init__.py  appveyor.yml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
Legacy/regression/: automatic_regression.py
RCAIDE/: BWB_Vehicle.py  EVTOL_Vehicle.py  General_Aviation_Vehicle.py  Human_Powered_Vehicle.py  Transport_Vehicle.py  Unmanned_Aerial_Vehicle.py  Vehicle.py  __init__.py  eVTOL_Vehicle.py  version.py
RCAIDE/Framework/: __init__.py
Regressions/: automatic_regression.py
Regressions/Vehicles/: ATR_72.py  Battery_Cell.py  Boeing_737.py  Boeing_BWB_450.py  Cessna_172.py  Concorde.py  Daedalus.py  Electric_Twin_Otter.py  Embraer_190.py  Fuel_Cell.py  Human_Powered_Glider.py  Isolated_Battery_Cell.py  Lockheed_C5a.py  Lockheed_Martin_F22.py  NASA_X48.py  NASA_X57.py  Navion.py  Solar_UAV.py  Stopped_Rotor_EVTOL.py  Tiltwing_EVTOL.py
docs/source/: RCAIDE.Framework.Analyses.Aerodynamics.rst  RCAIDE.Framework.Analyses.Atmospheric.rst  RCAIDE.Framework.Analyses.Common.rst  RCAIDE.Framework.Analyses.Emissions.rst  RCAIDE.Framework.Analyses.Geodesics.rst  RCAIDE.Framework.Analyses.Planets.rst  RCAIDE.Framework.Analyses.Propulsion.rst  RCAIDE.Framework.Analyses.Stability.rst  RCAIDE.Framework.Analyses.Weights.rst  RCAIDE.Framework.Analyses.rst  RCAIDE.Framework.Core.rst  RCAIDE.Framework.External_Interfaces.OpenVSP.rst  RCAIDE.Framework.External_Interfaces.rst  RCAIDE.Framework.Mission.Segments.Cruise.rst  RCAIDE.Framework.Mission.Segments.Untrimmed.rst  RCAIDE.Framework.Mission.Segments.rst  RCAIDE.Framework.Networks.rst  RCAIDE.Framework.Optimization.Common.rst  RCAIDE.Framework.Optimization.Packages.additive.rst  RCAIDE.Framework.Optimization.Packages.ipopt.rst  RCAIDE.Framework.Optimization.Packages.particle_swarm.rst  RCAIDE.Framework.Optimization.Packages.pyopt.rst  RCAIDE.Framework.Optimization.Packages.pyopt_sparse.rst  RCAIDE.Framework.Optimization.Packages.pyopt_surrogate.rst  RCAIDE.Framework.Plugins.pint.rst  (+143 more)
(+279 files in other folders)
