[metadata]
name = RCAIDE_Test
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A short description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/your-repo
project_urls =
    Bug Tracker = https://github.com/your-username/your-repo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    # List your dependencies here, for example:
    requests
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    your-script-name = RCAIDE.__main__:main_function

[bdist_wheel]
universal = 1
