[metadata]
name = RCAIDE_Test
version = 1.0.0
author = RCAIDE Trust
description = RCAIDE: Research Community Aerospace Interdisciplinary Design Environment
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://rcaide.org
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    scikit-learn
    plotly
    kaleido
    pandas
    importlib_metadata
python_requires = >=3.6
include_package_data = True

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    black
